[tool.poetry]
name = "pymleda"
version = "0.1.0"
description = "Python package that helps with preliminary eda for supervised machine learning tasks."
authors = ["Tanmay Sharma <tanmaysharma19@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
sklearn = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
